[package]
name = "beast_glatisant"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[lib]
name = "beast_glatisant"
path = "src/lib.rs"

# [[bin]]
# name = "beast_glatisant_cli"
# path = "src/bin/cli.rs"

[[bin]]
name = "beast_glatisant_web"
path = "src/bin/web.rs"

[dependencies]
log = "0.4"
env_logger = "0.6"

reqwest = "0.8"
http = "0.1"
futures = "0.1"
failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
chrono = { version = "0.4", features = ["serde"] }

lazy_static = "1.2"

comrak = "0.3"
linkify = "0.3"

structopt = "0.2"
actix-web = { version = "0.7.8" }

[features]
default = []
alpn = [ "actix-web/alpn" ]